--- a/.github/workflows/github_token.yml
+++ b/.github/workflows/github_token.yml
@@ -1,15 +1,21 @@
-name: Open new issue
-on: workflow_dispatch
+name: Create issue on commit
+
+on: [ push ]
 
 jobs:
-  open-issue:
+  create_issue:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
       issues: write
     steps:
-      - run: |
-          gh issue --repo ${{ github.repository }} \
-            create --title "Issue title" --body "Issue body"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create issue using REST API
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "title": "Automated issue for commit: ${{ github.sha }}",
+            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+            }' \
+          --fail
