Update Docker image name in GitHub Actions workflow

--- a/.github/workflows/test-push-img.yml
+++ b/.github/workflows/test-push-img.yml
@@ -36,7 +36,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/mon-app
+          images: melv0001/node-app-test
 
       - name: Build and push Docker image
         id: push
@@ -48,4 +48,3 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      
